--- a/src/components/sellers/index.html
+++ b/src/components/sellers/index.html
@@ -1,1 +1,21 @@
+
+<h1>Sellers</h1>
+<div class="col-lg-12">
+	<button type="button" class="btn btn-primary">Primary</button>
+</div>
+
+<div class="col-lg-10 col-lg-offset-1" style="align: center">
+	<table class="table table-striped">
+		<tr>
+		    <th>Seller</th>
+		    <th>Category</th> 
+  		</tr>
+		<tr class="active" ng-repeat="seller in sellers">
+			<td>{{seller.name}}</td>
+			<td>{{seller.category}}</td>
+		</tr>
+
+	</table>
+</div>
+
 <div> Hér ætti að birtast listi af seljendum - TODO: útfæra það!</div>
