--- a/src/components/sellers/index.html
+++ b/src/components/sellers/index.html
@@ -1,21 +1,62 @@
 
-<h1>Sellers</h1>
-<div class="col-lg-12">
-	<button type="button" class="btn btn-primary">Primary</button>
-</div>
 
-<div class="col-lg-10 col-lg-offset-1" style="align: center">
+<div class="page-header">
+  <h1>SöluTorgið <small>Sölu Aðilar</small></h1>
+</div>
+<!--<div>
+	<ul class="nav nav-pills nav-justified col-lg-8">
+		<li role="presentation" class="active"><a href="#/">Home</a></li>
+		<li role="presentation"><a href="#/">Profile</a></li>
+		<li role="presentation"><a href="#/">Messages</a></li>
+		<li role="presentation"><a href="#/">Profile</a></li>
+		<li role="presentation"><a href="#/">Messages</a></li>
+	</ul>
+</div>-->
+
+
+<div  style="align: center">
 	<table class="table table-striped">
 		<tr>
-		    <th>Seller</th>
-		    <th>Category</th> 
-  		</tr>
+			<th>Sölu Aðilar</th>
+			<th>Flokkur</th> 
+		</tr>
 		<tr class="active" ng-repeat="seller in sellers">
-			<td>{{seller.name}}</td>
+			<td><a href="{{path}}/{{seller.name}}"> {{seller.name}}</a></td>
 			<td>{{seller.category}}</td>
 		</tr>
 
 	</table>
+	<div class="col-lg-12">
+		<button type="button" class="btn btn-primary col-lg-2 col-lg-offset-10" data-toggle="modal" data-target=".bs-example-modal-lg">Bæta Við</button>
+
+		<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h2>Bæta við Söluaðila</h2>
+						</div>
+						<div class="panel-body">
+							<form>
+								<div class="form-group">
+									<label for="name">Nafn: </label>
+									<input type="text" class="form-control" id="name" placeholder="Nafn..." ng-model="name">
+								</div>
+								<div class="form-group">
+									<label for="category">Flokkur: </label>
+									<input type="text" class="form-control" id="category" placeholder="Flokkur..." ng-model="cat">
+								</div>
+								<div class="form-group">
+									<label for="image">Linkur á mynd: </label>
+									<input type="text" class="form-control" id="image" placeholder="Linkur á mynd..." ng-model="img">
+								</div>
+								<button type="submit" class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="addSeller(name, cat, img)">Bæta við</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
-<div> Hér ætti að birtast listi af seljendum - TODO: útfæra það!</div>
