--- a/src/components/sellers/index.html
+++ b/src/components/sellers/index.html
@@ -38,7 +38,7 @@
 						</div>
 						<div class="panel-body">
 							<form>
-								<div class="form-group">
+								<div class="form-group">//
 									<label for="name">Nafn: </label>
 									<input type="text" class="form-control" id="name" placeholder="Nafn..." ng-model="name">
 								</div>
