--- a/src/components/sellers/index.html
+++ b/src/components/sellers/index.html
@@ -31,7 +31,7 @@
 	<div class="col-lg-12">
 		<button type="button" class="btn btn-primary col-lg-2 col-lg-offset-10" data-toggle="modal" data-target=".bs-add-modal-lg">Bæta Við</button>
 
-		<div class="modal fade bs-add-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+		<div class="modal fade bs-add-modal-lg" id="add" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
 					<div class="panel panel-default">
@@ -61,8 +61,8 @@
 		</div>
 	</div>
 
-	<div class="modal fade bs-edit-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-			<div class="modal-dialog modal-lg">
+	<div class="modal fade bs-edit-modal-lg" id="update" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+			<div class="modal-dialog modal-lg" id="update">
 				<div class="modal-content">
 					<div class="panel panel-default">
 						<div class="panel-heading">
