--- a/src/components/sellers/index.html
+++ b/src/components/sellers/index.html
@@ -22,7 +22,7 @@
 			<th></th> 
 		</tr>
 		<tr class="active" ng-repeat="seller in sellers">
-			<td><a href="{{path}}/{{seller.name}}"> {{seller.name}}</a></td>
+			<td><a href="{{path}}/#/{{seller.id}}"> {{seller.name}}</a></td>
 			<td>{{seller.category}}</td>
 			<td><button type="button" class="btn btn-warning col-lg-4 col-lg-offset-8" data-toggle="modal" data-target=".bs-edit-modal-lg" ng-click="setUpdateSeller(seller)">Breyta söluaðila</button></td>
 		</tr>
