--- a/src/components/sellers/index.html
+++ b/src/components/sellers/index.html
@@ -3,18 +3,10 @@
 <div class="page-header">
   <h1>SöluTorgið <small>Sölu Aðilar</small></h1>
 </div>
-<!--<div>
-	<ul class="nav nav-pills nav-justified col-lg-8">
-		<li role="presentation" class="active"><a href="#/">Home</a></li>
-		<li role="presentation"><a href="#/">Profile</a></li>
-		<li role="presentation"><a href="#/">Messages</a></li>
-		<li role="presentation"><a href="#/">Profile</a></li>
-		<li role="presentation"><a href="#/">Messages</a></li>
-	</ul>
-</div>-->
 
 
 <div  style="align: center">
+	<div style="max-height: 800px; overflow-y: scroll;">
 	<table class="table table-striped">
 		<tr>
 			<th>Sölu Aðilar</th>
@@ -22,12 +14,14 @@
 			<th></th> 
 		</tr>
 		<tr class="active" ng-repeat="seller in sellers">
-			<td><a href="{{path}}/#/{{seller.id}}"> {{seller.name}}</a></td>
+			<td><a ng-click="viewSeller(seller.id)">{{seller.name}}</a></td>
 			<td>{{seller.category}}</td>
-			<td><button type="button" class="btn btn-warning col-lg-4 col-lg-offset-8" data-toggle="modal" data-target=".bs-edit-modal-lg" ng-click="setUpdateSeller(seller)">Breyta söluaðila</button></td>
+			<td><button type="button" class="btn btn-warning col-lg-4 col-lg-offset-8" data-toggle="modal" data-target=".bs-edit-modal-lg" ng-click="setUpdateSeller(seller)">Breyta</button></td>
 		</tr>
 
 	</table>
+	</div>
+	
 	<div class="col-lg-12">
 		<button type="button" class="btn btn-primary col-lg-2 col-lg-offset-10" data-toggle="modal" data-target=".bs-add-modal-lg">Bæta Við</button>
 
