--- a/src/components/sellers/singleSeller.html
+++ b/src/components/sellers/singleSeller.html
@@ -1,21 +1,29 @@
 <div>
-	<div style="padding-bottom: 70px;">
-		<img src="{{currSeller.imagePath}}" alt="..." class="img-rounded col-lg-3">
-		<h1>{{currSeller.name}}</h1>
+	<div class="row" style="padding-bottom: 50px;">
+		<img src="{{currSeller.imagePath}}" alt="..." class="img-rounded col-lg-3 col-xs-12">
+		<h1 class="col-lg-9 col-xs-12">{{currSeller.name}}</h1>
 		<h1><small>{{currSeller.category}}</small></h1>
 	</div>
-	<div style="padding-bottom: 70px;">
-		<ul class="nav nav-tabs nav-justified col-lg-5">
+
+	<div class="row" style="padding-bottom: 70px;">
+		<ol class="nav nav-tabs nav-justified col-lg-5">
 			<li role="presentation"><a href="#/">Allar Vörur</a></li>
 			<li role="presentation"><a href="#/">Topp 10</a></li>
-		</ul>
+		</ol>
 	</div>
-	<div>
+
+	<div style="max-height: 1000px; overflow-y: scroll;" class="row">
 		<ul ng-repeat="product in currSellerProducts">
 			<div class="col-lg-3" style="padding: 20px;">
-				<img src="{{product.imagePath}}" alt="Mynd fannst ekki" class="img-thumbnail" style="display: block; height: 250px; width: 300px">
-				<h3>{{product.name}}</h3><h3>{{product.price}}Kr.</h3>
+				<img ng-src=" {{ product.imagePath }} " class="img-thumbnail" style="display: block; height: 250px; width: 300px;">
+				<h3>product.name</h3><h3>{{product.price}}Kr.</h3>
 			</div>
 		</ul>
+	</div>
+
+	<div class="row" style="padding-top: 30px;">
+		<div>
+			<button type="button" class="btn btn-primary col-lg-3 col-lg-offset-9 col-xs-12">Skrá nýja vöru</button>
+		</div>
 	</div>
 </div>
