--- a/src/components/sellers/singleSeller.html
+++ b/src/components/sellers/singleSeller.html
@@ -6,9 +6,9 @@
 	</div>
 
 	<div class="row" style="padding-bottom: 70px;">
-		<ol class="nav nav-tabs nav-justified col-lg-5">
-			<li role="presentation"><a href="#/">Allar Vörur</a></li>
-			<li role="presentation"><a href="#/">Topp 10</a></li>
+		<ol class="nav nav-tabs nav-justified col-lg-5" data-toggle="tab">
+			<li role="presentation" ><a href="" ng-click="all()" >Allar Vörur</a></li>
+			<li role="presentation"><a href="" ng-click="top10()">Topp 10</a></li>
 		</ol>
 	</div>
 
