--- a/src/components/sellers/index.html
+++ b/src/components/sellers/index.html
@@ -7,19 +7,19 @@
 
 <div  style="align: center">
 	<div style="max-height: 800px; overflow-y: scroll;">
-	<table class="table table-striped">
-		<tr>
-			<th>Sölu Aðilar</th>
-			<th>Flokkur</th> 
-			<th></th> 
-		</tr>
-		<tr class="active" ng-repeat="seller in sellers">
-			<td><a ng-click="viewSeller(seller.id)">{{seller.name}}</a></td>
-			<td>{{seller.category}}</td>
-			<td><button type="button" class="btn btn-warning col-lg-4 col-lg-offset-8" data-toggle="modal" data-target=".bs-edit-modal-lg" ng-click="setUpdateSeller(seller)">Breyta</button></td>
-		</tr>
+		<table class="table table-striped">
+			<tr table-sort="name">
+				<th data-columnName="name">Sölu Aðilar</th>
+				<th>Flokkur</th> 
+				<th></th> 
+			</tr>
+			<tr class="active" ng-repeat="seller in sellers | orderBy:predicate:reverse">
+				<td><a ng-click="viewSeller(seller.id)" href="">{{seller.name}}</a></td>
+				<td>{{seller.category}}</td>
+				<td><button type="button" class="btn btn-warning col-lg-4 col-lg-offset-8" data-toggle="modal" data-target=".bs-edit-modal-lg" ng-click="setUpdateSeller(seller)">Breyta</button></td>
+			</tr>
 
-	</table>
+		</table>
 	</div>
 	
 	<div class="col-lg-12">
