--- a/src/components/sellers/singleSeller.html
+++ b/src/components/sellers/singleSeller.html
@@ -7,8 +7,8 @@
 
 	<div class="row" style="padding-bottom: 70px;">
 		<ol class="nav nav-tabs nav-justified col-lg-5" data-toggle="tab">
-			<li role="presentation" ><a href="" ng-click="all()" >Allar Vörur</a></li>
-			<li role="presentation"><a href="" ng-click="top10()">Topp 10</a></li>
+			<li role="presentation" ><a href="" ng-click="all()" translate="sellers.Nav-All"></a></li>
+			<li role="presentation"><a href="" ng-click="top10()" translate="sellers.Nav-Top10"></a></li>
 		</ol>
 	</div>
 
@@ -29,27 +29,27 @@
 					<div class="modal-content">
 						<div class="panel panel-default">
 							<div class="panel-heading">
-								<h2>Skrá nýja vöru</h2>
+								<h2 translate="sellers.AddProductTitle"></h2>
 							</div>
 							<div class="panel-body">
 								<form>
 									<div class="form-group">
-										<label for="name">Nafn á vöru: </label>
+										<label for="name" translate="sellers.Name"> </label>
 										<input type="text" class="form-control" id="name" placeholder="Nafn vöru..." ng-model="Pname">
 									</div>
 									<div class="form-group">
-										<label for="category">Verð: </label>
+										<label for="category"translate="sellers.Price"> </label>
 										<input type="text" class="form-control" id="category" placeholder="Flokkur..." ng-model="price">
 									</div>
 									<div class="form-group">
-										<label for="image">Magn til á lager: </label>
+										<label for="image" translate="sellers.quantity"></label>
 										<input type="text" class="form-control" id="image" placeholder="Magn á lager..." ng-model="quantity">
 									</div>
 									<div class="form-group">
-										<label for="image">Linkur á mynd: </label>
+										<label for="image" translate="sellers.link"></label>
 										<input type="text" class="form-control" id="image" placeholder="Linkur á mynd..." ng-model="Pimage">
 									</div>
-									<button type="submit" class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="editProduct(Pname, price, quantity, Pimage)">uppfæra</button>
+									<button type="submit" class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="editProduct(Pname, price, quantity, Pimage)" translate="sellers.AddButton"></button>
 								</form>
 							</div>
 						</div>
@@ -65,27 +65,27 @@
 					<div class="modal-content">
 						<div class="panel panel-default">
 							<div class="panel-heading">
-								<h2>Skrá nýja vöru</h2>
+								<h2 translate="sellers.EditProductTitle"></h2>
 							</div>
 							<div class="panel-body">
 								<form>
 									<div class="form-group">
-										<label for="name">Nafn á vöru: </label>
+										<label for="name" translate="sellers.Name"></label>
 										<input type="text" class="form-control" id="name" placeholder="Nafn vöru..." ng-model="Pname">
 									</div>
 									<div class="form-group">
-										<label for="category">Verð: </label>
+										<label for="category" translate="sellers.Price"></label>
 										<input type="text" class="form-control" id="category" placeholder="Flokkur..." ng-model="price">
 									</div>
 									<div class="form-group">
-										<label for="image">Magn til á lager: </label>
+										<label for="image" translate="sellers.quantity"></label>
 										<input type="text" class="form-control" id="image" placeholder="Magn á lager..." ng-model="quantity">
 									</div>
 									<div class="form-group">
-										<label for="image">Linkur á mynd: </label>
+										<label for="image" translate="sellers.link"></label>
 										<input type="text" class="form-control" id="image" placeholder="Linkur á mynd..." ng-model="Pimage">
 									</div>
-									<button type="submit" class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="editProduct(Pname, price, quantity, Pimage)">uppfæra</button>
+									<button type="submit" class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="editProduct(Pname, price, quantity, Pimage)" translate="sellers.update"></button>
 								</form>
 							</div>
 						</div>
